--- a/config/silica-gel.org
+++ b/config/silica-gel.org
@@ -16,6 +16,7 @@ server {
 	gzip_types text/plain text/xml text/css application/x-javascript text/javascript;
 	gzip_vary on;
 	gzip_disable "MSIE [1-6]\.(?!.*SV1)";
+ 	client_max_body_size 2M;
 
         ssl_certificate /etc/letsencrypt/live/silica-gel.org/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/silica-gel.org/privkey.pem;
